add tetris href

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             I was involved in both design and printing of many wine labels. Some incorporated artisan letterpress techniques. The above are actual examples of previous work at Paper Chefs.
         </p>
 
-        <a class="button purple mx-auto mt-4" href="index.html">Play the Game</a>
+        <a class="button purple mx-auto mt-4" href="https://tetris.thatportfolio.site/">Play the Game</a>
     </section>
 
 
