--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </h1>
 
         <p class="text-center color-black-60 mt-3 max-625px-wide">
-            I am a proficient full-stack web developer dedicated to delivering performant, tenable, and scalable web solutions.
+            I am a proficient full-stack web developer dedicated to delivering performant, tenable, and scaleable web solutions.
         </p>
         <p class="text-center color-black-60 max-625px-wide">
             My diverse experience spans web development, business management and graphic design. I bring the competencies to build well-construed plans that support project goals, propel organisational savings, drive efficiencies and launch engaging solutions.
@@ -112,7 +112,7 @@
         </h2>
 
         <p class="text-center color-white mt-3 max-625px-wide mb-5">
-            Below is a selection of recent work that I've been involved in. Click a thumbnail for more details.
+            Below are some notable recent projects.<br>Click a thumbnail for details.
         </p>
 
         <div class="recent-work-carousel">
@@ -121,18 +121,18 @@
                 <div></div>
             </div>
             <div>
-                <img src="images/JAMB-desktop-mockup-2.png"
-                data-modal="modal-jamb">
-                <div></div>
-            </div>
-            <div>
                 <img src="images/NTS-desktop-mockup-1.png"
                 data-modal="modal-nts">
                 <div></div>
             </div>
             <div>
-                <img src="images/TMC-desktop-mockup-1.png"
-                data-modal="modal-portfolio">
+                <img src="images/JAMB-desktop-mockup-2.png"
+                data-modal="modal-jamb">
+                <div></div>
+            </div>
+            <div>
+                <img src="images/SRF-desktop-mockup-1.png"
+                data-modal="modal-solidrollforming">
                 <div></div>
             </div>
         </div>
@@ -174,8 +174,6 @@
                 <img src="images/wine-bottle-3.jpg">
                 <img src="images/wine-bottle-4.jpg">
             </div>
-            <div><img src="images/NTS-desktop-mockup-1.png"></div>
-            <div><img src="images/TMC-desktop-mockup-1.png"></div>
         </div>
 
         <p class="text-center color-white pt-3 px-4 caption-text">
@@ -258,35 +256,36 @@
     <div class="modal" id="modal-jill">
         <h3 class="color-white">Counseling and Therapy</h3>
         <p class="color-white pt-2">
-            Jill Silverman approached WestHouz for a site re-design. Below is my first proposal. We went through many iterations since then, most of which where influenced by SEO improvements.
+            Jill Silverman approached <a href="http://westhouz.com/">WestHouz</a> for a site re-design. Below is my first mockup proposal. We went through many iterations since then, most of which where influenced by SEO improvements.
         </p>
-        <p class="color-white pb-3">See the live site <a href="https://counselingandtherapy.com/" target="_blank">here</a>.</p>
+        <p class="color-white pb-3">The site was built in PHP as a custom WordPress theme. As a happy customer, Jill continues to work with us making frequent  improvements and adjustments. See the live site <a href="https://counselingandtherapy.com/" target="_blank">here</a>.</p>
         <img src="images/Jill-Silverman-desktop-mockup-1.png">
+        <div class="close"></div>
+    </div>
+
+    <div class="modal" id="modal-nts">
+        <h3 class="color-white">Namibia Tours &amp; Safaris</h3>
+        <p class="color-white pt-2">I was employed full-time by NTS to work on both the frontend site and backoffice system. The office system was a custom written CRM-system, CMS, inventory and reporting system.</p>
+        <p class="color-white pb-3">Both the customer site and the backoffice system were written in PHP / Laravel. See the live site <a href="https://namibia-tours-safaris.com/" target="_blank">here</a>.</p>
+        <img src="images/NTS-desktop-mockup-1.png">
         <div class="close"></div>
     </div>
 
     <div class="modal" id="modal-jamb">
         <h3 class="color-white">JAMB</h3>
         <p class="color-white pt-2">
-            JAMB approached WestHouz for a new website. Design and development. Implemented as custom WordPress theme.
+            JAMB approached <a href="http://westhouz.com/">WestHouz</a> for a new website. I was put in charge of copywriting, design and development.  
         </p>
-        <p class="color-white pb-3">See the live site <a href="https://jambservices.com/" target="_blank">here</a>.</p>
+        <p class="color-white pb-3">The site was built in Divi for WordPress, as per customer request. See the live site <a href="https://jambservices.com/" target="_blank">here</a>.</p>
         <img src="images/JAMB-desktop-mockup-2.png">
         <div class="close"></div>
     </div>
 
-    <div class="modal" id="modal-nts">
-        <h3 class="color-white">NTS</h3>
-        <p class="color-white pt-2">I was employed by NTS for... backend Laravel, front end customer site. etc. etc.</p>
-        <p class="color-white pb-3">See the live site <a href="https://namibia-tours-safaris.com/" target="_blank">here</a>.</p>
-        <img src="images/NTS-desktop-mockup-1.png">
-        <div class="close"></div>
-    </div>
-
-    <div class="modal" id="modal-portfolio">
-        <h3 class="color-white">My Portfolio</h3>
-        <p class="color-white pt-2 pb-3">I approached myself to design a portfolio.</p>
-        <img src="images/TMC-desktop-mockup-1.png">
+    <div class="modal" id="modal-solidrollforming">
+        <h3 class="color-white">Solid Roll Forming</h3>
+        <p class="color-white pt-2">This site, for a brand new start-up, is in-progress in the design stages still. Planning to go live before the end of June and will update this blurb accordingly.</p>
+        <p class="color-white pb-3">They had an initial site put up <a href="http://solidrollforming.com/" target="_blank">here</a>.</p>
+        <img src="images/SRF-desktop-mockup-1.png">
         <div class="close"></div>
     </div>
 
