--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
 
     <section class="three-column-width bkg-black pt-5 pb-8">
         <div class="older-work-carousel">
+            <div class="farmshop-packaging">
+                <!-- farmshop packaging -->
+                <img src="images/farm-shop-1.jpg">
+                <img src="images/farm-shop-2.jpg">
+            </div>
             <div class="letterpress">
                 <!-- wine labels  -->
                 <img src="images/letterpress-1.jpg">
@@ -162,24 +167,31 @@
                 </div>
                 <img src="images/letterpress-4.jpg">
             </div>
-            <div class="farmshop-packaging">
-                <!-- farmshop packaging -->
-                <img src="images/farm-shop-1.jpg">
-                <img src="images/farm-shop-2.jpg">
-            </div>
             <div class="wine-labels">
                 <!-- wine labels  -->
                 <img src="images/wine-bottle-1.jpg">
-                <img src="images/wine-bottle-2.jpg">
+                <img src="images/wine-bottle-6.jpg">
                 <img src="images/wine-bottle-3.jpg">
                 <img src="images/wine-bottle-4.jpg">
             </div>
         </div>
 
         <p class="text-center color-white pt-3 px-4 caption-text">
+            I have been involved in both design and production of many packaging products. The above are actual examples of previous work manufactured at Paper Chefs, a print and design company that operated in the Cape Winelands.
+        </p>
+<!--         <p class="text-center color-white pt-3 px-4 caption-text">
+            Letterpress printing is much sought-after for its tactile, artisinal charm. I used to own a Heidelberg Platen press, and the craft of letterpress was a passion of mine.
+        </p>
+        <p class="text-center color-white pt-3 px-4 caption-text">
             I was involved in both design and printing of many wine labels. Some incorporated artisan letterpress techniques. The above are actual examples of previous work at Paper Chefs.
         </p>
-    </section>
+        <p class="text-center color-white pt-3 px-4 caption-text">
+            Living in South Africa's 'cullinary capital,' there was much demand for restaurant menus. Above is a selection of actual work.
+        </p>
+        <p class="text-center color-white pt-3 px-4 caption-text">
+            Business card design and printing is a staple of most designers and printing companies. Above is a selection of actual work. 
+        </p>
+ -->    </section>
 
 
 
@@ -194,7 +206,7 @@
         <img class="disp-block mx-auto mt-1 max-width-100" src="images/tetris-blocks.svg">
 
         <p class="text-center color-white mt-2 max-625px-wide">
-            I was involved in both design and printing of many wine labels. Some incorporated artisan letterpress techniques. The above are actual examples of previous work at Paper Chefs.
+            Here's a fun little time-waster game you can play. Crafted with love to show off some JavaScript skills! Ciao.
         </p>
 
         <a class="button purple mx-auto mt-4" href="https://tetris.thatportfolio.site/">Play the Game</a>
